--- a/.github/workflows/e2etests.yml
+++ b/.github/workflows/e2etests.yml
@@ -1,6 +1,14 @@
-name: e2e tests
-  uses: cypress-io/github-action@v2
-  with:
-    command: npm run test:e2e
-    start: npm run start-prod
-    wait-on: http://localhost:5000
+name: End-to-end tests
+on: [push]
+jobs:
+  cypress-run:
+    runs-on: ubuntu-20.04
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: e2e tests
+        uses: cypress-io/github-action@v2
+        with:
+          command: npm run test:e2e
+          start: npm run start-prod
+          wait-on: http://localhost:5000
