--- a/.github/workflows/e2etests.yml
+++ b/.github/workflows/e2etests.yml
@@ -4,6 +4,12 @@ jobs:
   cypress-run:
     runs-on: ubuntu-20.04
     steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+      # Install NPM dependencies, cache them correctly
+      # and run all Cypress tests
+      - name: Cypress run
+        uses: cypress-io/github-action@v2
       - name: e2e tests
         uses: cypress-io/github-action@v2
         with:
