--- a/.github/workflows/e2etests.yml
+++ b/.github/workflows/e2etests.yml
@@ -14,3 +14,4 @@ jobs:
           command: npm run test:e2e
           start: npm run start-prod
           wait-on: http://localhost:5000
+          wait-on-timeout: 240
