--- a/.github/workflows/e2etests.yml
+++ b/.github/workflows/e2etests.yml
@@ -7,6 +7,8 @@ jobs:
   cypress-run:
     runs-on: ubuntu-20.04
     steps:
+      - name: Checkout
+        uses: actions/checkout@v2
       - name: e2e tests
         uses: cypress-io/github-action@v2
         with:
