--- a/.github/workflows/e2etests.yml
+++ b/.github/workflows/e2etests.yml
@@ -14,4 +14,5 @@ jobs:
         with:
           command: npm run test:e2e
           start: npm run start-prod
+          wait-on: http://localhost:5000
 
