--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -13,9 +13,10 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           node-version: '16'
+
       - name: npm install
         run: npm install
-        
+
       - name: Lint
         run: npm run eslint
 
@@ -31,3 +32,5 @@ jobs:
           command: npm run test:e2e
           start: npm run start-prod
           wait-on: http://localhost:5000
+          browser: chrome
+          headless: true
