--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -7,8 +7,14 @@ on:
 
 jobs:
   hello_world_job:
-    runs-on: ubuntu-20.04
+    runs-on: macos-latest
     steps:
       - name: Say hello
         run: |
           echo "Hello World!"
+      - name: Now it is
+        run: |
+          date 
+      - name: Directory content
+        run: |
+          ls
