--- a/.github/workflows/hello.yaml
+++ b/.github/workflows/hello.yaml
@@ -14,7 +14,7 @@ jobs:
           echo "Hello World!"
       - name: Now it is
         run: |
-          "date"
+          date
       - name: Directory content
         run: |
           ls -l
