--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -23,8 +23,9 @@ jobs:
         run: npm run test
       - name: e2e tests
         uses: cypress-io/github-action@v2
-        with:
-          command: npm run test:e2e
+          with:  
+          browser: chrome
+          headless: true
+          command: npx cypress run
           start: npm run start-prod
-          wait-on: 'http://localhost:5000'
-          spec: cypress/e2e/0-testing-pokedex/pokedex_app.cy.js
+          wait-on: http://localhost:5000
