--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,4 +35,6 @@ jobs:
           heroku_email: 'sirveggie@hotmail.com'
           healthcheck: 'https://pokedex-fso-veggie.herokuapp.com/health'
           checkstring: 'ok'
+          delay: 5
           rollbackonhealthcheckfailed: true
+          
