--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -15,3 +15,5 @@ jobs:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
           heroku_app_name: "vibrant-gerard-06294" #Must be unique in Heroku
           heroku_email: "acm.holmes@gmail.com"
+          healthcheck: "https://vibrant-gerard-06294.herokuapp.com/health"
+          checkstring: "ok"
