--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -25,9 +25,9 @@ jobs:
       - name: test
         run: npm run test
       - name: e2e tests
-        uses: cypress-io/github-action@v2
+        uses: cypress-io/github-action@v4
         with:
-          command: npx cypress run
+          command: npm run test:e2e
           start: npm run start-prod
           wait-on: 'http://localhost:3001'
           wait-on-timeout: 120
