--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -12,5 +12,11 @@ jobs:
       - name: Say hello
         run: |
           echo "Hello World!"
-          date
-          ls -l
+    steps:
+       - name: Now it is
+          run: |
+          date 
+     steps:
+       - name: Directory content
+          run: |
+          ls -l 
