--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -11,7 +11,7 @@ jobs:
       steps:
         - uses: actions/checkout@v3
         - uses: actions/setup-node@v2
-        - uses: actions/heroku-deploy@3.6.8
+        - uses: actions/heroku-deploy@v3.6.8
           with:
            node-version: '16'
         - name: npm install
