--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -11,9 +11,13 @@ jobs:
       steps:
         - uses: actions/checkout@v3
         - uses: actions/setup-node@v2
-        - uses: actions/heroku-deploy@v3.6.8
           with:
            node-version: '16'
+        - uses: akhileshns/heroku-deploy@v3.12.12
+          with:
+            heroku_api_key: ${{secrets.HEROKU_API_KEY}}
+            heroku_app_name: "pokedex-open" 
+            heroku_email: "shevkunovnikita97@gmail.com"
         - name: npm install
           run: npm install
         - name: lint
